--- a/android-tutorial-3/build.gradle
+++ b/android-tutorial-3/build.gradle
@@ -9,12 +9,13 @@ android {
 
         externalNativeBuild {
             ndkBuild {
-                def gstRoot="/home/consti10/Downloads/gstreamer-1.0-android-universal-1.22.0"
+                def gstRoot
 
-                /*if (project.hasProperty('gstAndroidRoot'))
+                if (project.hasProperty('gstAndroidRoot'))
                     gstRoot = project.gstAndroidRoot
                 else
-                    gstRoot = System.env.GSTREAMER_ROOT_ANDROID*/
+                    gstRoot = System.env.GSTREAMER_ROOT_ANDROID
+
 
                 if (gstRoot == null)
                     throw new GradleException('GSTREAMER_ROOT_ANDROID must be set, or "gstAndroidRoot" must be defined in your gradle.properties in the top level directory of the unpacked universal GStreamer Android binaries')
