--- a/android-tutorial-3/build.gradle
+++ b/android-tutorial-3/build.gradle
@@ -35,6 +35,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             sourceSets {
                 main {
+                    manifest.srcFile 'AndroidManifest.xml'
                     java.srcDirs = ['src']
                     resources.srcDirs = ['src']
                     aidl.srcDirs = ['src']
